Renamed ChessHistory.java to LocalHistoryManager.java